--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -106,7 +106,7 @@
             {% if result['page'] == 'holiday' %}
             <a class="collapse-item active" href="/addholiday">Holidays</a>
             {% else %}
-            <a class="collapse-item">Holidays</a>
+            <a class="collapse-item" href="/addholiday">Holidays</a>
             {% endif %}
             </div>
         </div>
