get holiday data

--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -153,6 +153,10 @@
                                 <td class="text-light" style="background-color: #86cecb">
                                     {{ vals }}
                                 </td>
+                                {% elif vals == 'H' %}
+                                <td class="font-weight-bold" style="color: #137a7f">
+                                    {{ vals }}
+                                </td>
                                 {% else %}
                                 <td>
                                     {{ vals }}
