--- a/templates/form-holiday.html
+++ b/templates/form-holiday.html
@@ -53,7 +53,7 @@
                             </script>
                         </div>
                         <div class="form-group">
-                            <input id="text-description" class="form-control" type="text" name="description" required>
+                            <input id="text-description" class="form-control" type="text" placeholder="Description" name="description" required>
                         </div>
 
                         <div class="form-group">
